[package]
author = "Tiago Antunes <tiago.melo.antunes@gmail.com>"
categories = ["memory-management", "filesystem"]
description = "Strongly typed memory mapped files that allow for easy manipulation of large amounts of data."
edition = "2021"
keywords = ["mmap", "memory", "low-level", "mapped", "type", "typed", "lazy", "loading", "iterator"]
license = "MIT"
name = "easy_mmap"
readme = "README.md"
repository = "https://github.com/TiagoMAntunes/easy_mmap"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
mmap = "0.1.1"
rand = "0.8"
